--- a/TypingHabits/Info.plist
+++ b/TypingHabits/Info.plist
@@ -20,6 +20,8 @@
 	<string>generated</string>
 	<key>CFBundleVersion</key>
 	<string>generated</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.education</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>LSUIElement</key>
